# nu_plugin_bson

./: Cargo.toml  LICENSE  README.md  builduse.nu  v1.bson
.github/workflows/: audit.yml  ci.yml  rust.yml
docs/: bson-spec.html
src/: bson_to_nu.rs  custom_value.rs  decoder.rs  encoder.rs  from_bson.rs  from_bson2.rs  lib.rs  main.rs  nu_to_bson.rs  to_bson.rs  to_bson2.rs
