[package]
name = "nu_plugin_bson"
version = "25.1080.0"
edition = "2024"

description = "Nushell plugin for BSON format (Binary JSON)"
readme = "README.md"
repository = "https://github.com/Kissaki/nu_plugin_bson"
license = "MIT"
license-file = "LICENSE"

[dependencies]
bson = "2.14.0"
nu-plugin = "0.108.0"
nu-protocol = { version = "0.108.0", features = ["plugin"] }
base64 = "0.22.1"
