[package]
name = "nu_plugin_bson"
version = "25.1090.0"
edition = "2024"

description = "Nushell plugin for BSON format (Binary JSON)"
readme = "README.md"
repository = "https://github.com/Kissaki/nu_plugin_bson"
license = "MIT"

[dependencies]
bson = { version = "2.14.0", features = ["chrono-0_4"] }
nu-plugin = "0.109.0"
nu-protocol = { version = "0.109.0", features = ["plugin"] }
base64 = "0.22.1"
